feat(comment): 注释规范修改
