# example/api/openapi.json
@@ -71,7 +71,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ResponseOfPageList[User]"
+                  "$ref": "#/components/schemas/model.ResponseOfUser]"
                 }
               }
             }
@@ -81,7 +81,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
+                  "type": "object"
                 }
               }
             }
@@ -100,7 +100,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/User"
+                "type": "object"
               }
             }
           },
@@ -112,7 +112,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ResponseOfUser"
+                  "$ref": "#/components/schemas/model.ResponseOfUser"
                 }
               }
             }
@@ -122,7 +122,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
+                  "type": "object"
                 }
               }
             }
@@ -156,7 +156,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ResponseOfUser"
+                  "$ref": "#/components/schemas/model.ResponseOfUser"
                 }
               }
             }
@@ -166,7 +166,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
+                  "type": "object"
                 }
               }
             }
@@ -176,7 +176,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
+                  "type": "object"
                 }
               }
             }
@@ -212,7 +212,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/User"
+                "type": "object"
               }
             }
           },
@@ -224,7 +224,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ResponseOfUser"
+                  "$ref": "#/components/schemas/model.ResponseOfUser"
                 }
               }
             }
@@ -234,7 +234,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
+                  "type": "object"
                 }
               }
             }
@@ -244,7 +244,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
+                  "type": "object"
                 }
               }
             }
@@ -279,7 +279,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
+                  "type": "object"
                 }
               }
             }
@@ -332,7 +332,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ResponseOfstring"
+                  "$ref": "#/components/schemas/model.ResponseOfstring"
                 }
               }
             }
@@ -342,7 +342,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
+                  "type": "object"
                 }
               }
             }
@@ -352,170 +352,6 @@
     }
   },
   "components": {
-    "schemas": {
-      "ErrorResponse": {
-        "title": "ErrorResponse",
-        "type": "object",
-        "properties": {
-          "code": {
-            "description": "错误码",
-            "type": "integer",
-            "format": "int32"
-          },
-          "details": {
-            "description": "详细信息",
-            "type": "string"
-          },
-          "message": {
-            "description": "错误信息",
-            "type": "string"
-          }
-        },
-        "required": [
-          "code",
-          "message"
-        ]
-      },
-      "PageListOfUser": {
-        "title": "PageListOfUser",
-        "type": "object",
-        "properties": {
-          "items": {
-            "description": "数据列表",
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/User"
-            }
-          },
-          "page": {
-            "description": "当前页",
-            "type": "integer",
-            "format": "int32"
-          },
-          "size": {
-            "description": "每页数量",
-            "type": "integer",
-            "format": "int32"
-          },
-          "total": {
-            "description": "总数",
-            "type": "integer",
-            "format": "int32"
-          }
-        },
-        "required": [
-          "total",
-          "page",
-          "size",
-          "items"
-        ]
-      },
-      "ResponseOfPageList[User]": {
-        "title": "ResponseOfPageList[User]",
-        "type": "object",
-        "properties": {
-          "code": {
-            "description": "状态码",
-            "type": "integer",
-            "format": "int32"
-          },
-          "data": {
-            "$ref": "#/components/schemas/PageListOfUser",
-            "description": "数据"
-          },
-          "message": {
-            "description": "消息",
-            "type": "string"
-          }
-        },
-        "required": [
-          "code",
-          "message",
-          "data"
-        ]
-      },
-      "ResponseOfUser": {
-        "title": "ResponseOfUser",
-        "type": "object",
-        "properties": {
-          "code": {
-            "description": "状态码",
-            "type": "integer",
-            "format": "int32"
-          },
-          "data": {
-            "$ref": "#/components/schemas/User",
-            "description": "数据"
-          },
-          "message": {
-            "description": "消息",
-            "type": "string"
-          }
-        },
-        "required": [
-          "code",
-          "message",
-          "data"
-        ]
-      },
-      "ResponseOfstring": {
-        "title": "ResponseOfstring",
-        "type": "object",
-        "properties": {
-          "code": {
-            "description": "状态码",
-            "type": "integer",
-            "format": "int32"
-          },
-          "data": {
-            "description": "数据",
-            "type": "string"
-          },
-          "message": {
-            "description": "消息",
-            "type": "string"
-          }
-        },
-        "required": [
-          "code",
-          "message",
-          "data"
-        ]
-      },
-      "User": {
-        "title": "User",
-        "type": "object",
-        "properties": {
-          "age": {
-            "description": "年龄",
-            "type": "integer",
-            "format": "int32"
-          },
-          "email": {
-            "description": "邮箱",
-            "type": "string"
-          },
-          "id": {
-            "description": "用户ID",
-            "type": "integer",
-            "format": "int32"
-          },
-          "is_active": {
-            "description": "是否激活",
-            "type": "boolean"
-          },
-          "name": {
-            "description": "用户名",
-            "type": "string"
-          }
-        },
-        "required": [
-          "id",
-          "name",
-          "is_active"
-        ]
-      }
-    },
     "securitySchemes": {
       "ApiKeyAuth": {
         "type": "apiKey",
